# vasppy

./: .coveragerc  .gitignore  .readthedocs.yaml  .ruff.toml  .travis.yml  .zenodo.json  LICENSE.txt  README  README.md  changelog.md  grid.py  install.py  poscar.py  poscar_to_xtl.py  pyproject.toml  requirements.txt  setup.py  super  super.py  vasp_grid.py  zgrid.py
.github/workflows/: build.yml
docs/: .gitignore  Makefile  index.html  requirements.txt
docs/source/: cli_scripts.rst  conf.py  index.rst  modules.rst  vasppy.data.rst  vasppy.rst
docs/source/cli_scripts/: checkforce.rst  convergence_testing.rst
docs/source/examples/: rdf_example.ipynb  rdfs.ipynb
docs/source/examples/data/: NaCl_800K_MD_XDATCAR
docs/source/modules/: atom.rst  calculation.rst  cell.rst  configuration.rst  doscar.rst  grid.rst  kpoints.rst  optics.rst  outcar.rst  pimaim.rst  polyhedron.rst  poscar.rst  procar.rst  rdf.rst  summary.rst  vaspmeta.rst  xdatcar.rst
scripts/: effective_mass.py  fat_bands.py  murn.py  murnfit.py  pimaim_to_poscar.py  pimaim_to_xtl.py  poscar_to_cif.py  poscar_to_xtl.py  potcar_spec.py  proc_poscar.py  rotate_poscar.py  spacegroup.py  vasp_collate.py  vasp_grid.py  vasp_summary.py  xdatcar_to_disp.py  xdatcar_to_rdf.py
tests/: test_atom.py  test_band.py  test_calculation.py  test_cell.py  test_configuration.py  test_doscar.py  test_kpoints.py  test_neighbour_list.py  test_optics.py  test_outcar.py  test_poscar.py  test_procar.py  test_rdf.py  test_summary.py  test_utils.py  test_vaspmeta.py  test_vasprun.py  test_xdatcar.py
tests/scripts/: test_checkforce.py  test_convergence_testing.py
tests/test_data/: PROCAR_spin_polarised_test  PROCAR_test  vasp_summary_test.yaml
vasppy/: __init__.py  atom.py  band.py  calculation.py  cell.py  configuration.py  doscar.py  grid.py  install.py  kpoints.py  neighbour_list.py  optics.py  outcar.py  pimaim.py  polyhedron.py  poscar.py  poscar_sort.py  poscar_to_pimaim.py  procar.py  rdf.py  summary.py  super.py  units.py  utils.py  vasp_grid.py  vaspmeta.py  vasprun.py  version.py  xdatcar.py
vasppy/data/: GGA_md5.yaml  GGA_nelect.yaml  LDA_52_md5.yaml  LDA_52_nelect.yaml  LDA_54_md5.yaml  LDA_54r_md5.yaml  LDA_54r_nelect.yaml  LDA_md5.yaml  LDA_nelect.yaml  PBE_52_md5.yaml  PBE_52_nelect.yaml  PBE_54_md5.yaml  PBE_54r_md5.yaml  PBE_54r_nelect.yaml  PBE_md5.yaml  PBE_nelect.yaml  USPP_GGA_md5.yaml  USPP_GGA_nelect.yaml  USPP_LDA_md5.yaml  USPP_LDA_nelect.yaml  potcar_data.py  potcar_md5sum_data.py
vasppy/scripts/: check_species.py  checkforce.py  convergence_testing.py  effective_mass.py  fat_bands.py  murnfit.py  pimaim_to_poscar.py  pimaim_to_xtl.py  poscar_sort.py  poscar_to_cif.py  poscar_to_pimaim.py  poscar_to_xtl.py  potcar_spec.py  proc_poscar.py  r2r2_expansion.py  rotate_poscar.py  spacegroup.py  vasp_grid.py  vasp_summary.py  xdatcar_to_disp.py  xdatcar_to_rdf.py
